pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    app: test-app
spec:
  containers:
  - name: test-cntnr
    image: busybox
    command: ['sh', '-c', 'echo Kubernetes && sleep 1']
