kubia-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
